[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "zlog-sql"
version = "0.1.0"
description = "MySQL/SQLite logging plugin for ZNC IRC bouncer written in Python 3"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "BytesAndCoffee"}]
requires-python = ">=3.6"

[project.optional-dependencies]
mysql = ["PyMySQL"]
postgres = ["psycopg2"]

[tool.setuptools]
py-modules = ["zlog_sql"]
